v0.10.2
* [BGBUILD-347] Add support for Fedora 17. Remove unnecessary OS restrictions

v0.10.1

* [BGBUILD-332] Add support for bash completion
* [BGBUILD-338] Weed out non-deterministic tests
* [BGBUILD-337] In SL if default repos are disabled, /etc/yum.repos.d folder is not created
* [BGBUILD-344] New filesystem monitoring improvements (Fixes: Shifting failed. Permission denied issues)
* [BGBUILD-345] Change sudo/chown magic so it only occurs when running without explicit sudo/su (or --change-to-user)
* [BGBUILD-346] Confirm Ruby 1.9.3 support
* [BGBUILD-348] Simplecov coverage testing for Ruby >=1.9
* [BGBUILD-349] Use RbConfig instead of obsolete and deprecated Config deprecation warning with Ruby 1.9.3

v0.10.0

* [BGBUILD-313] boxgrinder build fails to build ec2 image if ec2-user already exists
* [BGBUILD-318] Add support for us-west-2 region
* [BGBUILD-308] Clearer error message when unrecognised file extension is used
* [BGBUILD-322] Allow selection of kernel and ramdisk for ec2 and ebs plugins
* [BGBUILD-302] Add support for VirtualPC platform
* [BGBUILD-195] Add support for OpenStack
* [BGBUILD-304] Standarize plugin callbacks
* [BGBUILD-325] Remove kickstart support
* [BGBUILD-323] Invalid kernel version recognition makes recreating initrd impossible
* [BGBUILD-326] Ensure building from root directory is successful
* [BGBUILD-211] Support for registering appliances with libvirt
* [BGBUILD-331] Add support for sa-east-1 EC2 region

v0.9.8

* [BGBUILD-312] Only use root privileges when necessary
* [BGBUILD-267] Add CentOS 6 support
* [BGBUILD-310] BoxGrinder doesn't build appliances when Fedora 16 is the host
* [BGBUILD-157] Add Alignment options for virtual appliances
* [BGBUILD-321] For EBS AMIs use the filesystem type specified for root partition

v0.9.7

* [BGBUILD-307] Appliance with swap file fails to build if selected OS is centos
* [BGBUILD-306] Switch for updates-testing repository for integration tests

v0.9.6
