@@ -18,18 +18,19 @@
 
 require 'rubygems'
 require 'boxgrinder-build/plugins/base-plugin'
+require 'boxgrinder-build/plugins/delivery/ebs/messages'
 require 'boxgrinder-build/helpers/ec2-helper'
+require 'boxgrinder-build/helpers/banner-helper'
 require 'aws-sdk'
 require 'open-uri'
 require 'timeout'
-require 'pp'
 
 module BoxGrinder
   class EBSPlugin < BasePlugin
 
     ROOT_DEVICE_NAME = '/dev/sda1'
-    POLL_FREQ = 1 #second
-    TIMEOUT = 1000 #seconds
+    POLL_FREQ = 1 # second
+    TIMEOUT = 1000 # seconds
     EC2_HOSTNAME_LOOKUP_TIMEOUT = 10
 
     plugin :type => :delivery, :name => :ebs, :full_name => "Elastic Block Storage", :require_root => true
@@ -45,19 +46,26 @@ module BoxGrinder
 
       set_default_config_value('kernel', false)
       set_default_config_value('ramdisk', false)
-
       set_default_config_value('availability_zone', @current_availability_zone)
       set_default_config_value('delete_on_termination', true)
       set_default_config_value('overwrite', false)
       set_default_config_value('snapshot', false)
       set_default_config_value('preserve_snapshots', false)
       set_default_config_value('terminate_instances', false)
+
+      set_default_config_value('account_number') do |_, _, value|
+        value.to_s.gsub!(/-/, '')
+      end
+
+      set_default_config_value('block_device_mappings', {}) do |k, m, v|
+        EC2Helper::block_device_mappings_validator(k, m, v)
+      end
+
       validate_plugin_config(['access_key', 'secret_access_key', 'account_number'], 'http://boxgrinder.org/tutorials/boxgrinder-build-plugins/#EBS_Delivery_Plugin')
 
       raise PluginValidationError, "You can only convert to EBS type AMI appliances converted to EC2 format. Use '-p ec2' switch. For more info about EC2 plugin see http://boxgrinder.org/tutorials/boxgrinder-build-plugins/#EC2_Platform_Plugin." unless @previous_plugin_info[:name] == :ec2
-      raise PluginValidationError, "You selected #{@plugin_config['availability_zone']} availability zone, but your instance is running in #{@current_availability_zone} zone. Please change availability zone in plugin configuration file to #{@current_availability_zone} (see http://boxgrinder.org/tutorials/boxgrinder-build-plugins/#EBS_Delivery_Plugin) or use another instance in #{@plugin_config['availability_zone']} zone to create your EBS AMI." if @plugin_config['availability_zone'] != @current_availability_zone
 
-      @plugin_config['account_number'].to_s.gsub!(/-/, '')
+      raise PluginValidationError, "You selected #{@plugin_config['availability_zone']} availability zone, but your instance is running in #{@current_availability_zone} zone. Please change availability zone in plugin configuration file to #{@current_availability_zone} (see http://boxgrinder.org/tutorials/boxgrinder-build-plugins/#EBS_Delivery_Plugin) or use another instance in #{@plugin_config['availability_zone']} zone to create your EBS AMI." if @plugin_config['availability_zone'] != @current_availability_zone
 
       AWS.config(:access_key_id => @plugin_config['access_key'],
         :secret_access_key => @plugin_config['secret_access_key'],
@@ -70,6 +78,8 @@ module BoxGrinder
     end
 
     def execute
+      @log.info Banner.message(EBS::Messages::EPHEMERAL_MESSAGE)
+
       ebs_appliance_description = "#{@appliance_config.summary} | Appliance version #{@appliance_config.version}.#{@appliance_config.release} | #{@appliance_config.hardware.arch} architecture"
 
       @log.debug "Checking if appliance is already registered..."
@@ -148,14 +158,12 @@ module BoxGrinder
       optmap = {
         :name => ebs_appliance_name,
         :root_device_name => ROOT_DEVICE_NAME,
-        :block_device_mappings => { ROOT_DEVICE_NAME => {
-                                    :snapshot => snapshot,
-                                    :delete_on_termination => @plugin_config['delete_on_termination']
-                                  },
-                                  '/dev/sdb' => 'ephemeral0',
-                                  '/dev/sdc' => 'ephemeral1',
-                                  '/dev/sdd' => 'ephemeral2',
-                                  '/dev/sde' => 'ephemeral3'},
+        :block_device_mappings => { 
+          ROOT_DEVICE_NAME => {
+            :snapshot => snapshot,
+            :delete_on_termination => @plugin_config['delete_on_termination']
+          }
+        },
         :architecture => @appliance_config.hardware.base_arch,
         :kernel_id => @plugin_config['kernel'] || @ec2_endpoints[@current_region][:kernel][@appliance_config.hardware.base_arch.intern][:aki],
         :description => ebs_appliance_description
@@ -163,7 +171,11 @@ module BoxGrinder
 
       optmap.merge!(:ramdisk_id => @plugin_config['ramdisk']) if @plugin_config['ramdisk']
 
+      unless @plugin_config['block_device_mappings'].empty?
+        optmap[:block_device_mappings].merge!(@plugin_config['block_device_mappings']) 
+      end
 
+      @log.debug("Options map: #{optmap.inspect}")
       image = @ec2.images.create(optmap)
 
       @log.info "Waiting for the new EBS AMI to become available"
@@ -260,7 +272,6 @@ module BoxGrinder
       end
       false
     end
-
   end
 end
 
